@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-21T02:28:52Z",
-  "count_outdated" : 10643,
-  "uniques_outdated" : 5312,
-  "count" : 11389,
-  "uniques" : 5429,
+  "timestamp" : "2026-02-21T12:59:30Z",
+  "count_outdated" : 10717,
+  "uniques_outdated" : 5325,
+  "count" : 11546,
+  "uniques" : 5453,
   "clones" : [
-    {
-      "timestamp": "2026-02-06T00:00:00Z",
-      "count": 74,
-      "count_minmax": [ 74, 74 ],
-      "count_decinc": [ 0, 74 ],
-      "uniques": 13,
-      "uniques_minmax": [ 13, 13 ],
-      "uniques_decinc": [ 0, 13 ]
-    },
     {
       "timestamp": "2026-02-07T00:00:00Z",
       "count": 2,
@@ -130,6 +121,15 @@
       "uniques": 0,
       "uniques_minmax": [ 0, 0 ],
       "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-20T00:00:00Z",
+      "count": 157,
+      "count_minmax": [ 157, 157 ],
+      "count_decinc": [ 0, 157 ],
+      "uniques": 24,
+      "uniques_minmax": [ 24, 24 ],
+      "uniques_decinc": [ 0, 24 ]
     }
   ]
 }
