@@ -1,12 +1,7 @@
 {
-  "count": 746,
-  "uniques": 94,
+  "count": 829,
+  "uniques": 106,
   "clones": [
-    {
-      "timestamp": "2026-02-06T00:00:00Z",
-      "count": 74,
-      "uniques": 13
-    },
     {
       "timestamp": "2026-02-07T00:00:00Z",
       "count": 2,
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-19T00:00:00Z",
       "count": 0,
       "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-20T00:00:00Z",
+      "count": 157,
+      "uniques": 24
     }
   ]
 }
